# Example-Project

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE  README.md  build.sh  coverage.sh  main.cpp  test.sh
.devcontainer/: Dockerfile  devcontainer.json
python-dep/: run.py
src/: CMakeLists.txt  calculator.cpp  calculator.h
test/: calculator_test.cpp
